# component-duckdb-transformation

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: actions.md  component_long_description.md  component_short_description.md  configSchema.json  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
component_config/sample-config/: config.json
scripts/: build_n_test.sh  check_versions.py
src/: component.py  configuration.py  duckdb_client.py  in_tables_creator.py  launcher.py  query_orchestrator.py  sql_parser.py  system_resources.py  versions.py
src/actions/: __init__.py  execution_plan_visualization.py  expected_input_tables.py  lineage_visualization.py
src/validators/: __init__.py  sql_validator.py
tests/: test_component.py  test_functional.py
tests/functional/dtypes/source/data/: config.json
tests/functional/dtypes/source/data/in/tables/: days.csv.manifest  sliced.manifest
tests/functional/dtypes/source/data/in/tables/sliced/: a.csv  b.csv
tests/functional/query_dependencies/source/data/: config.json
tests/functional/simple/source/data/: config.json
tests/functional/simple/source/data/in/tables/: days.csv  days.csv.manifest  sliced.manifest
tests/functional/simple_parquet/source/data/: config.json
tests/functional/simple_parquet/source/data/in/tables/: pq.parquet  pq.parquet.manifest
tests/functional/sync_action_execution_plan/source/data/: config.json
tests/functional/sync_action_execution_plan/source/data/in/tables/: complex_test_data_10.csv  complex_test_data_10.csv.manifest
tests/functional/version-1-4-4/source/data/: config.json
tests/functional/version-1-5-1/source/data/: config.json
tests/functional_dtypes/simple/source/data/in/tables/: sliced.manifest
tests/unit/: __init__.py  test_execution_plan_visualization_action.py  test_expected_input_tables_action.py  test_lineage_visualization_action.py
