[project]
name = "component-duckdb-transformation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
    "black>=25.1.0",
    "duckdb==1.4.4",
    "flake8>=7.3.0",
    "freezegun>=1.5.2",
    "keboola-component>=1.8.3",
    "keboola-datadirtest>=2.0.2",
    "keboola-http-client>=1.0.1",
    "keboola-utils>=1.1.0",
    "mock>=5.2.0",
    "pydantic>=2.11.7",
    "ruff>=0.12.7",
    "sqlglot>=25.0.0",
]

[tool.ruff]
exclude = [
    ".git",
    "__pycache__",
    "tests",
    "example",
    "venv",
]
ignore = []
line-length = 120
select = [
    "E",
    "F",
    "W",
]
